--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test:chrome": "npx playwright test --headed --project=chromium --debug",
-    "test:webkit": "npx playwright test --headed --project=webkit --debug",
-    "test:firefox": "npx playwright test --headed --project=firefox --debug"
+    "test:chrome": "npx playwright test --headed --project=chromium",
+    "test:webkit": "npx playwright test --headed --project=webkit",
+    "test:firefox": "npx playwright test --headed --project=firefox"
 
   },
   "keywords": [],
